因服务器部署错误，修改jdk为1.8